--- a/languages/webkima-elements-fa_IR.po
+++ b/languages/webkima-elements-fa_IR.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Webkima Elements\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-08-05 16:38+0000\n"
-"PO-Revision-Date: 2022-08-05 16:47+0000\n"
+"PO-Revision-Date: 2022-08-11 12:08+0000\n"
 "Last-Translator: نبی عبدی\n"
 "Language-Team: فارسی\n"
 "Language: fa_IR\n"
@@ -66,7 +66,7 @@ msgstr "فونت فارسی در داشبورد"
 #. URI of the plugin
 #. Author URI of the plugin
 msgid "https://webkima.com/"
-msgstr ""
+msgstr "https://webkima.com/"
 
 #: inc/options.php:92
 msgid "main settings"
